--- a/무료저작권.md
+++ b/무료저작권.md
@@ -11,7 +11,8 @@
 
 |이름|url|특징|
 |:--|:--|:--|
-||https://www.pexels.com/ko-kr/||
+|pexels|https://www.pexels.com/ko-kr/|1. Pexels의 모든 사진과 동영상을 무료로 사용할 수 있습니다. 2. 저작권을 고지하지 않아도 됩니다.|
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyMTE4MjE3NSwxMTkwMDM0NTUxXX0=
+eyJoaXN0b3J5IjpbLTE0NTczMDcyMDUsLTkyMTE4MjE3NSwxMT
+kwMDM0NTUxXX0=
 -->
