임시테스트.md updated from https://stackedit.io/

--- a/임시테스트.md
+++ b/임시테스트.md
@@ -1,4 +1,7 @@
 # 깃헙 이미지 드롭앤드랍 테스트
 ![lotto_logo](https://user-images.githubusercontent.com/70330124/158827336-444de892-f1a3-4817-a77c-4e2866bbd126.jpg)
+다른 곳에서도 잘링크됨 확인
 
-
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTEzODcwMjEwM119
+-->
