--- a/스택에딧.md
+++ b/스택에딧.md
@@ -1,3 +1,4 @@
+# **stackedit**
 ```
 window.XMLHttpRequest =  class MyXMLHttpRequest extends window.XMLHttpRequest {
   open(...args){
@@ -25,5 +26,5 @@ window.XMLHttpRequest =  class MyXMLHttpRequest extends window.XMLHttpRequest {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMTkwODc4MV19
+eyJoaXN0b3J5IjpbMTIwMzgyMjA2XX0=
 -->
