스택에딧.md updated from https://stackedit.io/

--- a/스택에딧.md
+++ b/스택에딧.md
@@ -1,5 +1,5 @@
 # **stackedit**
-```
+```javascript
 window.XMLHttpRequest =  class MyXMLHttpRequest extends window.XMLHttpRequest {
   open(...args){
     if(args[1].startsWith("https://api.github.com/user?access_token=")) {
@@ -26,5 +26,5 @@ window.XMLHttpRequest =  class MyXMLHttpRequest extends window.XMLHttpRequest {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwMzgyMjA2XX0=
+eyJoaXN0b3J5IjpbLTczOTE3NDYwN119
 -->
